tests/invalid/coerce_clobbered.err_exp
coerce_clobbered.m:021: In clause for `bad(in(clobbered), out)':
coerce_clobbered.m:021:   in coerce:
coerce_clobbered.m:021:   mode error: `X' has instantiatedness `clobbered',
coerce_clobbered.m:021:   but it must be ground.
